--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -96,8 +96,8 @@
 
 					<div class="col_half col_last tright">
 						<div class="fright clearfix copyright-links">
-							<a href="https://www.mageplaza.com/magento-2-extensions/">Magento 2 extensions</a> / 
-							<a href="https://www.mageplaza.com/download-magento/">Download Magento 2</a> / 
+							<a href="#">Magento 2 extensions</a> / 
+							<a href="#">Download Magento 2</a> / 
 						</div>
 
 						<div class="clear"></div>
