--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,9 +21,9 @@
 
 						<ul class="one-page-menu">
 							<li><a href="{{ site.url }}" data-href="#section-home"><div>Home</div></a></li>
-							<li><a href="https://www.mageplaza.com/magento-2-affiliate-extension/" data-href="#section-home"><div>Affiliate</div></a></li>
-							<li><a href="https://www.mageplaza.com/magento-2-seo-extension/" data-href="#section-home"><div>SEO</div></a></li>
-							<li><a href="{{ site.url }}/magento-2-extensions/"><div>Magento 2 Extensions</div></a></li>
+							<li><a href="{{ site.url }}" data-href="#section-home"><div>Blog</div></a></li>
+							<li><a href="{{ site.url }}/about.html" data-href="#section-home"><div>Về chúng tôi</div></a></li>
+							<li><a href="{{ site.url }}/contact.html"><div>Liên hệ</div></a></li>
 
 						</ul>
 					</nav><!-- #primary-menu end -->
