--- a/_includes/header_landingpage.html
+++ b/_includes/header_landingpage.html
@@ -26,7 +26,7 @@
 							<li><a href="{{ site.url }}/pricing/"><div>Pricing</div></a></li>
 							<!-- <li><a href="#" data-href="#section-faqs"><div>FAQs</div></a></li> -->
 							<li><a href="{{ site.url }}/contact.html" data-href="#section-contact"><div>Contact</div></a></li>
-							<li><a href="https://www.mageplaza.com/magento-2-one-step-checkout-extension/" data-href="#section-buy"><div>Magento 2 One Step Checkout</div></a></li>
+							<li><a href="#" data-href="#section-buy"><div>Magento 2 One Step Checkout</div></a></li>
 
 							
 						</ul>
