--- a/_includes/header_landingpage.html
+++ b/_includes/header_landingpage.html
@@ -1,6 +1,6 @@
 <!-- Document Wrapper
     ============================================= -->
-
+    <div id="wrapper" class="clearfix">
 
         <!-- Top Bar
         ============================================= -->
@@ -692,3 +692,5 @@
 			</div>
 
 		</header><!-- #header end -->
+
+	</div><!-- #wrapper end -->
