--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,6 @@
 <!-- Document Wrapper
     ============================================= -->
+    <div id="wrapper" class="clearfix">
 
         <!-- Top Bar
         ============================================= -->
@@ -691,3 +692,5 @@
 			</div>
 
 		</header><!-- #header end -->
+
+	</div><!-- #wrapper end -->
