--- a/_includes/_after_header.html
+++ b/_includes/_after_header.html
@@ -1,4 +1,4 @@
-		<section id="slider" class="slider-parallax swiper_wrapper full-screen clearfix" data-effect="fade" data-autoplay="4500" data-speed="650" data-loop="true" data-progress="true">
+		<!--section id="slider" class="slider-parallax swiper_wrapper full-screen clearfix" data-effect="fade" data-autoplay="4500" data-speed="650" data-loop="true" data-progress="true">
 
 			<div class="slider-parallax-inner">
 
@@ -36,4 +36,4 @@
 
 			<a href="#" data-scrollto="#about" data-offset="100" class="dark one-page-arrow"><i class="icon-angle-down infinite animated fadeInDown"></i></a>
 
-		</section>
+		</section-->
