--- a/_includes/_before_end_body.html
+++ b/_includes/_before_end_body.html
@@ -1,4 +1,4 @@
-	<script>
+	<!--script>
 		// Owl Carousel Scripts
 		$('#oc-features').owlCarousel({
 			items: 1,
@@ -12,4 +12,4 @@
 				1200: { stagePadding: 200 }
 			},
 		});
-	</script>
+	</script-->
