--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,18 +14,19 @@
 
 							<div class="widget clearfix">
 
-								<img src="{{ site.url }}/assets/img/logo/logo.png" alt="" class="Logo Study Buddy">
+								<img src="media/images/footer-widget-logo.png" alt="" class="footer-logo">
 
-								<p>EVERYTHING IS DESIGNED, BUT SOME THINGS ARE DESIGNED WELL!</p>
+								<p>We believe in <strong>Simple</strong>, <strong>Creative</strong> &amp; <strong>Flexible</strong> Design Standards.</p>
 
-								<div style="background: url('media/images/world-map.png') no-repeat center center; background-size: 100%;">
+								<div style="background: url('assets/images/world-map.png') no-repeat center center; background-size: 100%;">
 									<address>
-									<strong>TRỤ SỞ:</strong><br>
-									TP. Hà Nội<br>
+										<strong>Headquarters:</strong><br>
+										795 Folsom Ave, Suite 600<br>
+										San Francisco, CA 94107<br>
 									</address>
-									<abbr title="Phone Number"><strong>Phone:</strong></abbr> <a href="tel:0985629621">0985 629 621</a><br>
-									<abbr title="Fax"><strong>Fax:</strong></abbr> <a href="tel:0985629621">0985 629 621</a><br>
-									<abbr title="Email Address"><strong>Email:</strong></abbr> <a href="mailto:info@studybuddy.vn">info@studybuddy.vn</a><br>
+									<abbr title="Phone Number"><strong>Phone:</strong></abbr> (91) 8547 632521<br>
+									<abbr title="Fax"><strong>Fax:</strong></abbr> (91) 11 4752 1433<br>
+									<abbr title="Email Address"><strong>Email:</strong></abbr> info@canvas.com
 								</div>
 
 							</div>
@@ -39,13 +40,13 @@
 								<h4>Blogroll</h4>
 
 								<ul>
-									<li><a href="{{ site.url }}">Trang chủ</a></li>
-									<li><a href="{{ site.url }}/blog/">Blog</a></li>
-									<li><a href="{{ site.url }}/team/">Team</a></li>
-									<li><a href="{{ site.url }}/support/">Support</a></li>
-									<li><a href="{{ site.url }}/contact/">Contact</a></li>
-									<li><a href="{{ site.url }}/feedback/">Feedback</a></li>
-									<li><a href="{{ site.url }}/testimonials/">Testimonials</a></li>
+									<li><a href="#">Documentation</a></li>
+									<li><a href="#">Feedback</a></li>
+									<li><a href="#">Plugins</a></li>
+									<li><a href="#">Support Forums</a></li>
+									<li><a href="#">Themes</a></li>
+									<li><a href="#">WordPress Blog</a></li>
+									<li><a href="#">WordPress Planet</a></li>
 								</ul>
 
 							</div>
@@ -55,8 +56,7 @@
 						<div class="col_one_third col_last">
 
 							<div class="widget clearfix">
-								<h4>Bài viết mới nhất</h4>
-
+								<h4>Flickr Photostream</h4>
 								<div id="post-list-footer">
 									<div class="spost clearfix">
 										<div class="entry-c">
@@ -104,13 +104,13 @@
 							<div class="row">
 
 								<div class="col-md-6 bottommargin-sm">
-									<div class="counter counter-small"><span data-from="50" data-to="6142" data-refresh-interval="80" data-speed="3000" data-comma="true"></span></div>
-									<h5 class="nobottommargin">Bài Viết</h5>
+									<div class="counter counter-small"><span data-from="50" data-to="15065421" data-refresh-interval="80" data-speed="3000" data-comma="true"></span></div>
+									<h5 class="nobottommargin">Total Downloads</h5>
 								</div>
 
 								<div class="col-md-6 bottommargin-sm">
-									<div class="counter counter-small"><span data-from="100" data-to="1187" data-refresh-interval="50" data-speed="2000" data-comma="true"></span></div>
-									<h5 class="nobottommargin">Khách hàng</h5>
+									<div class="counter counter-small"><span data-from="100" data-to="18465" data-refresh-interval="50" data-speed="2000" data-comma="true"></span></div>
+									<h5 class="nobottommargin">Clients</h5>
 								</div>
 
 							</div>
@@ -118,14 +118,14 @@
 						</div>
 
 						<div class="widget subscribe-widget clearfix">
-							<h5><strong>Đăng kí</strong> để nhận ngay khuyến mãi mới nhất từ<br><span>STUDY BUDDY</span></h5>
+							<h5><strong>Subscribe</strong> to Our Newsletter to get Important News, Amazing Offers &amp; Inside Scoops:</h5>
 							<div class="widget-subscribe-form-result"></div>
-							<form id="widget-subscribe-form" action="subscribe.php" role="form" method="post" class="nobottommargin">
+							<form id="widget-subscribe-form" action="include/subscribe.php" role="form" method="post" class="nobottommargin">
 								<div class="input-group divcenter">
 									<span class="input-group-addon"><i class="icon-email2"></i></span>
-									<input type="email" id="widget-subscribe-form-email" name="widget-subscribe-form-email" class="form-control required email" placeholder="Địa chỉ Email">
+									<input type="email" id="widget-subscribe-form-email" name="widget-subscribe-form-email" class="form-control required email" placeholder="Enter your Email">
 									<span class="input-group-btn">
-										<button class="btn btn-success" type="submit">ĐĂNG KÍ</button>
+										<button class="btn btn-success" type="submit">Subscribe</button>
 									</span>
 								</div>
 							</form>
@@ -140,14 +140,14 @@
 										<i class="icon-facebook"></i>
 										<i class="icon-facebook"></i>
 									</a>
-									<a href="#"><small style="display: block; margin-top: 3px;"><strong>Fanpage</strong><br>Facebook</small></a>
+									<a href="#"><small style="display: block; margin-top: 3px;"><strong>Like us</strong><br>on Facebook</small></a>
 								</div>
 								<div class="col-md-6 clearfix">
-									<a href="{{ site.url }}/rss.xml" class="social-icon si-dark si-colored si-rss nobottommargin" style="margin-right: 10px;">
+									<a href="#" class="social-icon si-dark si-colored si-rss nobottommargin" style="margin-right: 10px;">
 										<i class="icon-rss"></i>
 										<i class="icon-rss"></i>
 									</a>
-									<a href="{{ site.url }}/rss.xml"><small style="display: block; margin-top: 3px;"><strong>Đăng kí</strong><br>Nhận tin</small></a>
+									<a href="#"><small style="display: block; margin-top: 3px;"><strong>Subscribe</strong><br>to RSS Feeds</small></a>
 								</div>
 
 							</div>
@@ -158,13 +158,69 @@
 
 				</div><!-- .footer-widgets-wrap end -->
 
-				<div class="clear"></div>
+			</div>
 
-				<div class="row center">
-					© Copyright {{ site.time | date:"%Y" }}. All Rights Reserved by STUDY BUDDY Ltd.<br>
-					<div class="copyright-links"><a href="{{ site.url }}/tos.html">Terms of Use</a> / <a href="{{ site.url }}/privacy.html">Privacy Policy</a></div>
+			<!-- Copyrights
+			============================================= -->
+			<div id="copyrights">
+
+				<div class="container clearfix">
+
+					<div class="col_half">
+						Copyrights &copy; 2014 All Rights Reserved by Canvas Inc.<br>
+						<div class="copyright-links"><a href="#">Terms of Use</a> / <a href="#">Privacy Policy</a></div>
+					</div>
+
+					<div class="col_half col_last tright">
+						<div class="fright clearfix">
+							<a href="#" class="social-icon si-small si-borderless si-facebook">
+								<i class="icon-facebook"></i>
+								<i class="icon-facebook"></i>
+							</a>
+
+							<a href="#" class="social-icon si-small si-borderless si-twitter">
+								<i class="icon-twitter"></i>
+								<i class="icon-twitter"></i>
+							</a>
+
+							<a href="#" class="social-icon si-small si-borderless si-gplus">
+								<i class="icon-gplus"></i>
+								<i class="icon-gplus"></i>
+							</a>
+
+							<a href="#" class="social-icon si-small si-borderless si-pinterest">
+								<i class="icon-pinterest"></i>
+								<i class="icon-pinterest"></i>
+							</a>
+
+							<a href="#" class="social-icon si-small si-borderless si-vimeo">
+								<i class="icon-vimeo"></i>
+								<i class="icon-vimeo"></i>
+							</a>
+
+							<a href="#" class="social-icon si-small si-borderless si-github">
+								<i class="icon-github"></i>
+								<i class="icon-github"></i>
+							</a>
+
+							<a href="#" class="social-icon si-small si-borderless si-yahoo">
+								<i class="icon-yahoo"></i>
+								<i class="icon-yahoo"></i>
+							</a>
+
+							<a href="#" class="social-icon si-small si-borderless si-linkedin">
+								<i class="icon-linkedin"></i>
+								<i class="icon-linkedin"></i>
+							</a>
+						</div>
+
+						<div class="clear"></div>
+
+						<i class="icon-envelope2"></i> info@canvas.com <span class="middot">&middot;</span> <i class="icon-headphones"></i> +91-11-6541-6369 <span class="middot">&middot;</span> <i class="icon-skype2"></i> CanvasOnSkype
+					</div>
+
 				</div>
 
-			</div>
+			</div><!-- #copyrights end -->
 
 		</footer><!-- #footer end -->
