--- a/_includes/header.html
+++ b/_includes/header.html
@@ -52,7 +52,7 @@
 				</div><!-- #logo end -->
 
 				<div class="top-advert">
-					<img src="images/magazine/ad.jpg" alt="Ad">
+					<img src="media/images/magazine/ad.jpg" alt="Ad">
 				</div>
 
 			</div>
