--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,9 +10,9 @@
 					============================================= -->
 					<div class="top-links">
 						<ul>
-							<li><a href="index.html">Trang Chủ</a></li>
-							<li><a href="faqs.html">Hỗ Trợ</a></li>
-							<li><a href="contact.html">Liên Hệ</a></li>
+							<li><a href="{{ site.url }}">Trang Chủ</a></li>
+							<li><a href="{{ site.url }}/ho-tro/">Hỗ Trợ</a></li>
+							<li><a href="{{ site.url }}/lien-he/">Liên Hệ</a></li>
 						</ul>
 					</div><!-- .top-links end -->
 
@@ -52,7 +52,7 @@
 				</div><!-- #logo end -->
 
 				<div class="top-advert">
-					<img src="media/images/magazine/ad.jpg" alt="Ad">
+					<img src="{{ site.url }}/media/images/magazine/ad.jpg" alt="Ad">
 				</div>
 
 			</div>
@@ -68,11 +68,12 @@
 						<div id="primary-menu-trigger"><i class="icon-reorder"></i></div>
 
 						<ul>
-							<li class="current"><a href="index.html"><div>Home</div></a></li>
-							<li><a href="#"><div>Features</div></a></li>
-							<li class="mega-menu"><a href="#"><div>Pages</div></a></li>
-							<li class="mega-menu"><a href="#"><div>Portfolio</div></a></li>
-							<li class="mega-menu"><a href="#"><div>Blog</div></a></li>
+							<li class="current"><a href="{{ site.url }}"><div>Trang chủ</div></a></li>
+							<li class="mega-menu"><a href="{{ site.url }}/ky-nang-mem/"><div>Kỹ Năng Mềm</div></a></li>
+							<li class="mega-menu"><a href="{{ site.url }}/nghe-thuat-giao-tiep/"><div>Nghệ Thuật Giao Tiếp</div></a></li>
+							<li class="mega-menu"><a href="{{ site.url }}/cau-chuyen-cuoc-song/"><div>Câu Chuyện Cuộc Sống</div></a></li>
+							<li class="mega-menu"><a href="{{ site.url }}/blog/"><div>Blog</div></a></li>
+							<li><a href="{{ site.url }}/lien-he/"><div>Liên Hệ</div></a></li>
 						</ul>
 
 						<!-- Top Search
