--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -34,7 +34,7 @@
             <div class="container clearfix">
 				<ol class="breadcrumb">
 					<li><a href="{{ site.url }}">Trang Chủ</a></li>
-					<li><a href="{{ site.url }}{{ page.category }}">Tin Tức</a></li>
+					<li><a href="{{ site.url }}/{{ page.category }}">{{ page.category }}</a></li>
 					<li class="active"><a href="{{ post.url }}">{{ page.title }}</a></li>
 				</ol>
 			</div>
