--- a/_includes/recent_posts.html
+++ b/_includes/recent_posts.html
@@ -1,5 +1,5 @@
 <div class="row">
-    {% for post in site.categories.tin-tuc limit:5 %}
+    {% for post in site.posts limit:5 %}
         <div class="spost clearfix">
             <div class="entry-c">
                 <div class="entry-image">
