--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -61,9 +61,9 @@
 									{% for post in site.posts limit:3 %}
     								    <div class="spost clearfix">
     								        <div class="entry-c">
-    								            <div class="entry-image">
+    								            <!--div class="entry-image">
     								               <a href="{{ site.url }}{{ post.url }}"><img class="image_fade img-circle" src="{{ post.image }}" alt="{{ post.title }}"></a>
-    								            </div>
+    								            </div-->
     								            <div class="entry-title">
     								                <h5><a href="{{ site.url }}{{ post.url }}">{{ post.title }}</a></h5>
     								            </div>
