--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,7 +14,7 @@
 
 							<div class="widget clearfix">
 
-								<img src="{{ site.url }}/assets/img/logo/logo.png" alt="Logo" class="footer-logo">
+								<!--img src="{{ site.url }}/assets/img/logo/logo.png" alt="Logo" class="footer-logo"-->
 
 								<p>We believe in <strong>Simple</strong>, <strong>Creative</strong> &amp; <strong>Flexible</strong> Design Standards.</p>
 
