--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -41,79 +41,79 @@
 
 		</section>
 		
-			<div class="content-wrap">
-			<div class="container clearfix">
-				<div class="postcontent nobottommargin clearfix">
-					
-					{{ content }}
+		<div class="content-wrap">
+		<div class="container clearfix">
+			<div class="postcontent nobottommargin clearfix">
+				
+				{{ content }}
 
-					<p><strong><i>Nếu thấy bổ ích, đừng ngại:</i></strong></p>
+				<p><strong><i>Nếu thấy bổ ích, đừng ngại:</i></strong></p>
 
-					<div class="col_half">
- 						<div class="fb-like" data-href="{{ post.url }}" data-layout="standard" data-action="like" data-size="large" data-show-faces="true" data-share="true"></div>
+				<div class="col_half">
+ 					<div class="fb-like" data-href="{{ post.url }}" data-layout="standard" data-action="like" data-size="large" data-show-faces="true" data-share="true"></div>
  
-						<div class="fb-save" data-uri="{{ post.url }}" data-size="large"></div>
-					</div>
-					<div class="col_half col_last">
-						<div class="rw-ui-container"></div>
-					</div>
-
-					<div class="line"></div>
-
-					{% include after_posts.html %}
-
-					<div class="line"></div>
-					
-					<!-- Tag Cloud
-					============================================= -->
-
-					<strong>Tags Cloud:</strong>
-					
-					<p class="tag-list">
-		              	{% for tag in page.tags %}
-							<div class="tagcloud"><a href="{{ site.url }}/tim-kiem/?q={{ tag }}">{{ tag }}</a></div>
-						{% endfor %}
-	              	</p>
-
-					<!-- .tagcloud end -->
-
-					<div class="clear"></div>
-
-					<!-- Post Single - Share
-					============================================= -->
-					<div class="si-share noborder clearfix">
-						<strong>Chia sẻ bài viết này:</strong> <a href="https://facebook.com/sharer.php?u={{ site.url }}{{ page.url }}" title="Share on Facebook" rel="nofollow" target="_blank" class="button button-rounded si-facebook si-colored leftmargin-sm"><i class="icon-facebook"></i> Facebook</a> <a href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ site.url }}{{ page.url }}" title="Share on Twitter" rel="nofollow" target="_blank" class="button button-rounded si-twitter si-colored"><i class="icon-twitter"></i> Twitter</a> <a href="https://plus.google.com/share?url={{ site.url }}{{ page.url }}" title="Share on Google+" rel="nofollow" target="_blank" class="button button-rounded si-gplus si-colored"><i class="icon-gplus"></i> Google +</a> <a href="#" class="button button-rounded si-pinterest si-colored"><i class="icon-pinterest"></i> Pinterest</a>
-					</div><!-- Post Single - Share End -->
-					
-					<div class="line"></div>
-
-					<div class="fancy-title title-dotted-border">
-						<h4>Để lại bình luận</h4>
-					</div>
-					<div class="fb-comments" data-href="{{ post.url }}" data-numposts="5"></div>
-
-					<div class="line"></div>
-
-					<h4>BÀI VIẾT LIÊN QUAN</h4>
-					<div class="row clearfix">
-						{% include related_post.html %}
-					</div>
-					<!-- END related posts -->
-
-					<div class="line"></div>
-
-					{% include people_also_searched_for.html %}
-
-					{% include _before_end_body.html %}
-
+					<div class="fb-save" data-uri="{{ post.url }}" data-size="large"></div>
 				</div>
-					
-				<div class="sidebar nobottommargin col_last clearfix">
-					{% include sidebar.html %}
+				<div class="col_half col_last">
+					<div class="rw-ui-container"></div>
 				</div>
 
+				<div class="line"></div>
+
+				<!--{% include after_posts.html %}
+
+				<div class="line"></div>-->
+				
+				<!-- Tag Cloud
+				============================================= -->
+
+				<strong>Tags Cloud:</strong>
+				
+				<p class="tag-list">
+		           	{% for tag in page.tags %}
+						<div class="tagcloud"><a href="{{ site.url }}/tim-kiem/?q={{ tag }}">{{ tag }}</a></div>
+					{% endfor %}
+	           	</p>
+
+				<!-- .tagcloud end -->
+
+				<!--div class="clear"></div-->
+
+				<!-- Post Single - Share
+				============================================= -->
+				<!--div class="si-share noborder clearfix">
+					<strong>Chia sẻ bài viết này:</strong> <a href="https://facebook.com/sharer.php?u={{ site.url }}{{ page.url }}" title="Share on Facebook" rel="nofollow" target="_blank" class="button button-rounded si-facebook si-colored leftmargin-sm"><i class="icon-facebook"></i> Facebook</a> <a href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ site.url }}{{ page.url }}" title="Share on Twitter" rel="nofollow" target="_blank" class="button button-rounded si-twitter si-colored"><i class="icon-twitter"></i> Twitter</a> <a href="https://plus.google.com/share?url={{ site.url }}{{ page.url }}" title="Share on Google+" rel="nofollow" target="_blank" class="button button-rounded si-gplus si-colored"><i class="icon-gplus"></i> Google +</a> <a href="#" class="button button-rounded si-pinterest si-colored"><i class="icon-pinterest"></i> Pinterest</a>
+				</div><!-- Post Single - Share End -->
+				
+				<div class="line"></div>
+
+				<div class="fancy-title title-dotted-border">
+					<h4>Để lại bình luận</h4>
 				</div>
+				<div class="fb-comments" data-href="{{ post.url }}" data-numposts="5"></div>
+
+				<div class="line"></div>
+
+				<h4>BÀI VIẾT LIÊN QUAN</h4>
+				<div class="row clearfix">
+					{% include related_post.html %}
+				</div>
+				<!-- END related posts -->
+
+				<div class="line"></div>
+
+				{% include people_also_searched_for.html %}
+
+				{% include _before_end_body.html %}
+
 			</div>
+				
+			<!--div class="sidebar nobottommargin col_last clearfix">
+				{% include sidebar.html %}
+			</div-->
+
+			</div>
+		</div>
 			
 
 		</section><!-- #content end -->
