--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,9 +24,9 @@
 										795 Folsom Ave, Suite 600<br>
 										San Francisco, CA 94107<br>
 									</address>
-									<abbr title="Phone Number"><strong>Phone:</strong></abbr> (91) 8547 632521<br>
-									<abbr title="Fax"><strong>Fax:</strong></abbr> (91) 11 4752 1433<br>
-									<abbr title="Email Address"><strong>Email:</strong></abbr> info@canvas.com
+									<abbr title="Phone Number"><strong>Phone:</strong></abbr> 0985 629 621<br>
+									<abbr title="Fax"><strong>Fax:</strong></abbr> 01234 629 621<br>
+									<abbr title="Email Address"><strong>Email:</strong></abbr> info@nguyentronghuynh.com
 								</div>
 
 							</div>
@@ -40,13 +40,12 @@
 								<h4>Blogroll</h4>
 
 								<ul>
-									<li><a href="#">Documentation</a></li>
-									<li><a href="#">Feedback</a></li>
-									<li><a href="#">Plugins</a></li>
-									<li><a href="#">Support Forums</a></li>
-									<li><a href="#">Themes</a></li>
-									<li><a href="#">WordPress Blog</a></li>
-									<li><a href="#">WordPress Planet</a></li>
+									<li><a href="#">Nghệ Thuật Giao Tiếp</a></li>
+									<li><a href="#">Câu Chuyện Cuộc Sống</a></li>
+									<li><a href="#">Kỹ Năng Mềm</a></li>
+									<li><a href="#">Blog</a></li>
+									<li><a href="#">Hỗ Trợ</a></li>
+									<li><a href="#">Liên Hệ</a></li>
 								</ul>
 
 							</div>
@@ -105,14 +104,14 @@
 						</div>
 
 						<div class="widget subscribe-widget clearfix">
-							<h5><strong>Subscribe</strong> to Our Newsletter to get Important News, Amazing Offers &amp; Inside Scoops:</h5>
+							<h5><strong>Đăng kí</strong> để nhận tin tức khuyến mãi mới nhất từ chúng tôi:</h5>
 							<div class="widget-subscribe-form-result"></div>
 							<form id="widget-subscribe-form" action="include/subscribe.php" role="form" method="post" class="nobottommargin">
 								<div class="input-group divcenter">
 									<span class="input-group-addon"><i class="icon-email2"></i></span>
-									<input type="email" id="widget-subscribe-form-email" name="widget-subscribe-form-email" class="form-control required email" placeholder="Enter your Email">
+									<input type="email" id="widget-subscribe-form-email" name="widget-subscribe-form-email" class="form-control required email" placeholder="Địa chỉ Email">
 									<span class="input-group-btn">
-										<button class="btn btn-success" type="submit">Subscribe</button>
+										<button class="btn btn-success" type="submit">Đăng kí</button>
 									</span>
 								</div>
 							</form>
@@ -127,7 +126,7 @@
 										<i class="icon-facebook"></i>
 										<i class="icon-facebook"></i>
 									</a>
-									<a href="#"><small style="display: block; margin-top: 3px;"><strong>Like us</strong><br>on Facebook</small></a>
+									<a href="#"><small style="display: block; margin-top: 3px;"><strong>Like me</strong><br>on Facebook</small></a>
 								</div>
 								<div class="col-md-6 clearfix">
 									<a href="#" class="social-icon si-dark si-colored si-rss nobottommargin" style="margin-right: 10px;">
@@ -149,7 +148,7 @@
 
 				<div class="row center">
 					© Copyright {{ site.time | date:"%Y" }}. All Rights Reserved.<br>
-					<div class="copyright-links"><a href="{{ site.url }}/tos.html">Terms of Use</a> / <a href="{{ site.url }}/privacy.html">Privacy Policy</a></div>
+					<div class="copyright-links"><a href="{{ site.url }}/tos.html">Chính Sách</a> / <a href="{{ site.url }}/privacy.html">Pháp Lý</a></div>
 				</div>
 
 			</div><!-- #copyrights end -->
