--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -54,7 +54,7 @@
 				<div class="fb-save" data-uri="{{ post.url }}" data-size="large"></div>
 			</div>
 
-			<{% include after_posts.html %}
+			<!--{% include after_posts.html %}-->
 
 			<div class="line"></div>
 			
