--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -79,20 +79,22 @@
 				<strong>Chia sẻ bài viết này:</strong> <a href="https://facebook.com/sharer.php?u={{ site.url }}{{ page.url }}" title="Share on Facebook" rel="nofollow" target="_blank" class="button button-rounded si-facebook si-colored leftmargin-sm"><i class="icon-facebook"></i> Facebook</a> <a href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ site.url }}{{ page.url }}" title="Share on Twitter" rel="nofollow" target="_blank" class="button button-rounded si-twitter si-colored"><i class="icon-twitter"></i> Twitter</a> <a href="https://plus.google.com/share?url={{ site.url }}{{ page.url }}" title="Share on Google+" rel="nofollow" target="_blank" class="button button-rounded si-gplus si-colored"><i class="icon-gplus"></i> Google +</a> <a href="#" class="button button-rounded si-pinterest si-colored"><i class="icon-pinterest"></i> Pinterest</a>
 			</div>< Post Single - Share End -->
 
-			<div class="line"></div>
+			<div class="clear"></div>
 
 			<div class="fancy-title title-dotted-border">
 				<h4>Để lại bình luận</h4>
 			</div>
 			<div class="fb-comments" data-href="{{ post.url }}" data-numposts="5"></div>
 
-			<div class="line"></div>
+			<div class="clear"></div>
 
 			<h4>BÀI VIẾT LIÊN QUAN</h4>
 			<div class="row clearfix">
 				{% include related_post.html %}
 			</div>
 			<!-- END related posts -->
+
+			<div class="clear"></div>
 
 			{% include people_also_searched_for.html %}
 
