--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -61,7 +61,7 @@
 							<li><i class="icon-folder-open"></i> 
 								<p class="tag-list">
 			    				   	{% for category in page.categories %}
-										<div class="categorycloud"><a href="{{ categories }}">{{ categories }}</a></div>
+										<div class="tagcloud"><a href="{{ categories }}">{{ categories }}</a></div>
 									{% endfor %}
 	    	    				</p>
 	    	    			</li>
