--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -56,7 +56,7 @@
 						<!-- Entry Meta
 						============================================= -->
 						<ul class="entry-meta clearfix">
-							<li><i class="icon-calendar3"></i> {{ post.date | date_to_long_string }}</li>
+							<li><i class="icon-calendar3"></i> {{ page.date | date_to_long_string }}</li>
 							<li><a href="#"><i class="icon-user"></i> {{ page.author }}</a></li>
 							<li><i class="icon-folder-open"></i> 
 								<p class="tag-list">
