--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -60,7 +60,7 @@
 							<li><a href="#"><i class="icon-user"></i> {{ page.author }}</a></li>
 							<li><i class="icon-folder-open"></i> 
 								<p class="tag-list">
-			    				   	{% for category in page.categories %}
+			    				   	{% for tag in page.categories %}
 										<div class="tagcloud"><a href="{{ categories }}">{{ categories }}</a></div>
 									{% endfor %}
 	    	    				</p>
