--- a/_includes/related_post.html
+++ b/_includes/related_post.html
@@ -1,5 +1,5 @@
 <div class="row">
-    {% for post in page.category limit:4 %}
+    {% for post in site.post.category limit:4 %}
     <div class="col-md-3 col-sm-6 bottommargin">
         <div class="ipost clearfix">
             <div class="entry-image">
