--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,18 +1,50 @@
-<div class="footer">
-	<div class="wrapper clearfix">
-		<div class="content-footer">
-			<p style="text-align: center;"><span style="font-size:24px;">PHÒNG KINH DOANH TRỰC TIẾP DỰ ÁN THE GOLDEN ARMOR</span></p>
-			<p style="text-align: center;"><span style="font-size:30px;color: #2ab53c;">HOTLINE: <strong>0944.326.836 - 0975.829.622</strong></span></p>     
-		</div><!--End content-footer-->
-			
-		<div class="copyright-otit">
-			<ul class="list-social clearfix">
-				<li><a href="https://www.facebook.com/The-Golden-Armor-B6-Gi%E1%BA%A3ng-V%C3%B5-191659268287784/" target="_blank" title="" class="icon-social01"></a></li>
-				<!--<li><a href="" target="_blank" title="" class="icon-social02"></a></li>-->
-				<li><a href="#" target="_blank" title="" class="icon-social03"></a></li>
-				<li><a href="#" target="_blank" title="" class="icon-social04"></a></li>
-			</ul>
-			<p><a href="/" title="thiết kế web bất động sản chuyên nghiệp" target="_blank">Design By: https://nguyentronghuynh.com</a></p>
+<!-- start footer Area -->		
+<footer class="footer-area section-gap">
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-5 col-md-6 col-sm-6">
+				<div class="single-footer-widget">
+					<h6>VỀ CHÚNG TÔI</h6>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore dolore magna aliqua.
+					</p>
+					<p class="footer-text">
+						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+						Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+					</p>								
+				</div>
+			</div>
+			<div class="col-lg-5  col-md-6 col-sm-6">
+				<div class="single-footer-widget">
+					<h6>Newsletter</h6>
+					<p>Stay update with our latest</p>
+					<div class="" id="mc_embed_signup">
+						<form target="_blank" novalidate="true" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01" method="get" class="form-inline">
+							<input class="form-control" name="EMAIL" placeholder="Enter Email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Email '" required="" type="email">
+                            	<button class="click-btn btn btn-default"><span class="lnr lnr-arrow-right"></span></button>
+                            	<div style="position: absolute; left: -5000px;">
+									<input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value="" type="text">
+								</div>
+
+							<div class="info"></div>
+						</form>
+					</div>
+				</div>
+			</div>						
+			<div class="col-lg-2 col-md-6 col-sm-6 social-widget">
+				<div class="single-footer-widget">
+					<h6>MẠNG XÃ HỘI</h6>
+					<p>Let us be social</p>
+					<div class="footer-social d-flex align-items-center">
+						<a href="#"><i class="fa fa-facebook"></i></a>
+						<a href="#"><i class="fa fa-twitter"></i></a>
+						<a href="#"><i class="fa fa-dribbble"></i></a>
+						<a href="#"><i class="fa fa-behance"></i></a>
+					</div>
+				</div>
+			</div>							
 		</div>
-	</div><!--End wrapper-->
-</div><!--End footer-->
+	</div>
+</footer>	
+<!-- End footer Area -->
