--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html dir="ltr" lang="vi-VN" xmlns="http://www.w3.org/1999/xhtml" xml:lang="vi-vn">
+<!DOCTYPE html>
+<html lang="vi-VN" class="no-js">
 <head>
 
 	{% include head.html %}
@@ -8,29 +8,13 @@
 
 <body>
 
-	<div class="body-website">
+	{% include header.html %}
 
-		{% include header.html %}
+	{% include banner.html %}
 
-		<div class="container">
+	{{ content }}
 
-			{% include slider.html %}
-
-			<div class="body-wrapper">
-
-				{{ content }}
-
-			</div><!--End body-wrapper-->
-
-		</div><!--End container-->
-
-		{% include form.html %}
-
-		{% include footer.html %}
-
-	</div><!--End body-website-->
-
-	{% include header_mobile.html %}
+	{% include footer.html %}
 
 	{% include script.html %}
 
