--- a/_includes/header.html
+++ b/_includes/header.html
@@ -34,7 +34,14 @@
               <li class="menu-has-children"><a href="">TRANG</a>
                 <ul>
                   <li><a href="blog-single.html">blog Single</a></li>
-                  <li><a href="elements.html">Elements</a></li>
+                  <li><a href="#">Quản trị website</a></li>
+                  <li><a href="#">Thiết kế đồ họa</a></li>
+                  <li><a href="#">Thiết kế logo</a></li>
+                  <li><a href="#">Thiết kế website</a></li>
+                  <li><a href="#">Quảng Cáo Google</a></li>
+                  <li><a href="#">Quảng cáo Facebook</a></li>
+                  <li><a href="#"></a></li>
+                  <li><a href="#"></a></li>
                 </ul>
               </li>                   
             </ul>
