--- a/_includes/head_default.html
+++ b/_includes/head_default.html
@@ -69,14 +69,14 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet"> 
 	
 	<!--CSS============================================= -->
-	<link rel="stylesheet" href="css/linearicons.css" media="none" onload="if(media!='all')media='all'">
-	<link rel="stylesheet" href="css/font-awesome.min.css" media="none" onload="if(media!='all')media='all'">
-	<link rel="stylesheet" href="css/bootstrap.css" media="none" onload="if(media!='all')media='all'">
-	<link rel="stylesheet" href="css/magnific-popup.css" media="none" onload="if(media!='all')media='all'">
-	<link rel="stylesheet" href="css/nice-select.css" media="none" onload="if(media!='all')media='all'">
-	<link rel="stylesheet" href="css/animate.min.css" media="none" onload="if(media!='all')media='all'">
-	<link rel="stylesheet" href="css/owl.carousel.css" media="none" onload="if(media!='all')media='all'">
-	<link rel="stylesheet" href="css/main.css" media="none" onload="if(media!='all')media='all'">
+	<link rel="stylesheet" href="{{ site.url }}/assets/css/linearicons.css" media="none" onload="if(media!='all')media='all'">
+	<link rel="stylesheet" href="{{ site.url }}/assets/css/font-awesome.min.css" media="none" onload="if(media!='all')media='all'">
+	<link rel="stylesheet" href="{{ site.url }}/assets/css/bootstrap.css" media="none" onload="if(media!='all')media='all'">
+	<link rel="stylesheet" href="{{ site.url }}/assets/css/magnific-popup.css" media="none" onload="if(media!='all')media='all'">
+	<link rel="stylesheet" href="{{ site.url }}/assets/css/nice-select.css" media="none" onload="if(media!='all')media='all'">
+	<link rel="stylesheet" href="{{ site.url }}/assets/css/animate.min.css" media="none" onload="if(media!='all')media='all'">
+	<link rel="stylesheet" href="{{ site.url }}/assets/css/owl.carousel.css" media="none" onload="if(media!='all')media='all'">
+	<link rel="stylesheet" href="{{ site.url }}/assets/css/main.css" media="none" onload="if(media!='all')media='all'">
 
 	
 	<!--[if lt IE 9]>
