--- a/_includes/head_default.html
+++ b/_includes/head_default.html
@@ -68,7 +68,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet"> 
 	
-	<!--CSS============================================= -->
+	<!--CSS============================================= >
 	<link rel="stylesheet" href="{{ site.url }}/assets/css/linearicons.css" media="none" onload="if(media!='all')media='all'">
 	<link rel="stylesheet" href="{{ site.url }}/assets/css/font-awesome.min.css" media="none" onload="if(media!='all')media='all'">
 	<link rel="stylesheet" href="{{ site.url }}/assets/css/bootstrap.css" media="none" onload="if(media!='all')media='all'">
@@ -76,7 +76,17 @@
 	<link rel="stylesheet" href="{{ site.url }}/assets/css/nice-select.css" media="none" onload="if(media!='all')media='all'">
 	<link rel="stylesheet" href="{{ site.url }}/assets/css/animate.min.css" media="none" onload="if(media!='all')media='all'">
 	<link rel="stylesheet" href="{{ site.url }}/assets/css/owl.carousel.css" media="none" onload="if(media!='all')media='all'">
-	<link rel="stylesheet" href="{{ site.url }}/assets/css/main.css" media="none" onload="if(media!='all')media='all'">
+	<link rel="stylesheet" href="{{ site.url }}/assets/css/main.css" media="none" onload="if(media!='all')media='all'"-->
+	
+	<link rel="stylesheet" href="{{ site.url }}/assets/css/linearicons.css">
+	<link rel="stylesheet" href="{{ site.url }}/assets/css/font-awesome.min.css">
+	<link rel="stylesheet" href="{{ site.url }}/assets/css/bootstrap.css">
+	<link rel="stylesheet" href="{{ site.url }}/assets/css/magnific-popup.css">
+	<link rel="stylesheet" href="{{ site.url }}/assets/css/nice-select.css">	
+	<link rel="stylesheet" href="{{ site.url }}/assets/css/hexagons.min.css">							
+	<link rel="stylesheet" href="{{ site.url }}/assets/css/animate.min.css">
+	<link rel="stylesheet" href="{{ site.url }}/assets/css/owl.carousel.css">
+	<link rel="stylesheet" href="{{ site.url }}/assets/css/main.css">
 
 	
 	<!--[if lt IE 9]>
