--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3537,3 +3537,9 @@ body.mobile-nav-active #mobile-nav-toggle {
                End Blog Details  Page style
 ################
 */
+
+.single-feature:hover {
+  box-shadow: -14.142px 14.142px 20px 0px rgba(157, 157, 157, 0.5);
+  cursor: pointer;
+  background-color: #fab700;
+}
