--- a/_includes/head_default.html
+++ b/_includes/head_default.html
@@ -78,14 +78,14 @@
 	<link rel="stylesheet" href="{{ site.url }}/assets/css/owl.carousel.css" media="none" onload="if(media!='all')media='all'">
 	<link rel="stylesheet" href="{{ site.url }}/assets/css/main.css" media="none" onload="if(media!='all')media='all'"-->
 	
-	<link rel="stylesheet" href="{{ site.url }}/css/linearicons.css">
-	<link rel="stylesheet" href="{{ site.url }}/css/font-awesome.min.css">
-	<link rel="stylesheet" href="{{ site.url }}/css/bootstrap.css">
-	<link rel="stylesheet" href="{{ site.url }}/css/magnific-popup.css">
-	<link rel="stylesheet" href="{{ site.url }}/css/nice-select.css">					
-	<link rel="stylesheet" href="{{ site.url }}/css/animate.min.css">
-	<link rel="stylesheet" href="{{ site.url }}/css/owl.carousel.css">
-	<link rel="stylesheet" href="{{ site.url }}/css/main.css">
+	<link rel="stylesheet" href="{{ site.url }}/assets/css/linearicons.css">
+	<link rel="stylesheet" href="{{ site.url }}/assets/css/font-awesome.min.css">
+	<link rel="stylesheet" href="{{ site.url }}/assets/css/bootstrap.css">
+	<link rel="stylesheet" href="{{ site.url }}/assets/css/magnific-popup.css">
+	<link rel="stylesheet" href="{{ site.url }}/assets/css/nice-select.css">					
+	<link rel="stylesheet" href="{{ site.url }}/assets/css/animate.min.css">
+	<link rel="stylesheet" href="{{ site.url }}/assets/css/owl.carousel.css">
+	<link rel="stylesheet" href="{{ site.url }}/assets/css/main.css">
 
 	
 	<!--[if lt IE 9]>
