--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,19 +1,22 @@
-<!-- start banner Area -->
-<section class="banner-area relative" id="home">
-    <div class="overlay overlay-bg"></div>  
-    <div class="container">
-        <div class="row fullscreen d-flex align-items-center justify-content-start">
-            <div class="banner-content col-lg-9">
-                <h6 class="text-white">Openning on 21st February, 2018</h6>
-                <h1 class="text-white">
-                    Exhibition on Modern Era                
-                </h1>
-                <p class="pt-20 pb-20 text-white">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.  sed do eiusmod tempor incididunt..
-                </p>
-                <a href="#" class="primary-btn text-uppercase">Get Started</a>
-            </div>                                          
+    <!-- start banner Area -->
+    <section class="banner-area" id="home">
+        <div class="container">
+            <div class="row fullscreen d-flex align-items-center justify-content-center">
+                <div class="banner-content col-lg-6 col-md-6">
+                    <h1>
+                    Improved <br>
+                    Production level <br>
+                    with Robotics
+                    </h1>
+                    <p class="text-white text-uppercase">
+                        Everyone wants the innovation through robotics
+                    </p>
+                    <a href="#" class="primary-btn header-btn text-uppercase">View Details</a>
+                </div>
+                <div class="banner-img col-lg-6 col-md-6">
+                    <img class="img-fluid" src="{{ site.url }}/assets/img/banner-img.png" alt="">
+                </div>
+            </div>
         </div>
-    </div>                  
-</section>
-<!-- End banner Area -->    
+    </section>
+    <!-- End banner Area -->
