--- a/_includes/head_default.html
+++ b/_includes/head_default.html
@@ -52,11 +52,10 @@
 	<link rel="stylesheet" href="{{ site.url }}/assets/css/bootstrap.css" media="none" onload="if(media!='all')media='all'">
 	<link rel="stylesheet" href="{{ site.url }}/assets/css/magnific-popup.css" media="none" onload="if(media!='all')media='all'">
 	<link rel="stylesheet" href="{{ site.url }}/assets/css/nice-select.css" media="none" onload="if(media!='all')media='all'">
+	<link rel="stylesheet" href="{{ site.url }}/assets/css/hexagons.min.css" media="none" onload="if(media!='all')media='all'">
 	<link rel="stylesheet" href="{{ site.url }}/assets/css/animate.min.css" media="none" onload="if(media!='all')media='all'">
 	<link rel="stylesheet" href="{{ site.url }}/assets/css/owl.carousel.css" media="none" onload="if(media!='all')media='all'">
 	<link rel="stylesheet" href="{{ site.url }}/assets/css/main.css" media="none" onload="if(media!='all')media='all'">
-
-	
 	<!--[if lt IE 9]>
 		<script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
 	<![endif]-->
