--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,30 +1,18 @@
 <!DOCTYPE html>
-<html dir="ltr" lang="vi-VN">
+<html lang="vi-VN" class="no-js">
 <head>
+
 	{% include head.html %}
+
 </head>
 
 <body>
 
-	<div class="body-website">
+	{% include header.html %}
 
-		{% include header.html %}
+	{{ content }}
 
-		<div class="container">
-
-			{{ content }}
-
-		</div><!--End container-->
-
-		{% include form.html %}
-
-		{% include footer.html %}
-
-	</div><!--End body-website-->
-
-	{% include header_mobile.html %}
-
-	{% include script.html %}
+	{% include footer.html %}
 
 	{% include footer_script.html %}
 
