--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,16 +7,16 @@
       <nav id="nav-menu-container">
         <ul class="nav-menu">
           <li class="menu-active"><a href="/">TRANG CHỦ</a></li>
-          <li><a href="{{ site.url }}/assets/about.html">GIỚI THIỆU</a></li>
-          <li><a href="{{ site.url }}/assets/service.html">DỊCH VỤ</a></li>
-          <li><a href="{{ site.url }}/assets/products.html">Products</a></li>
+          <li><a href="{{ site.url }}/gioi-thieu/">GIỚI THIỆU</a></li>
+          <li><a href="{{ site.url }}/dich-vu/">DỊCH VỤ</a></li>
+          <li><a href="{{ site.url }}/san-pham/">Products</a></li>
           <li class="menu-has-children"><a href="">Blog</a>
           <ul>
             <li><a href="{{ site.url }}/assets/blog-home.html">BLOG</a></li>
             <li><a href="{{ site.url }}/assets/blog-single.html">Blog Single</a></li>
           </ul>
         </li>
-        <li><a href="contact.html">LIÊN HỆ</a></li>
+        <li><a href="{{ site.url }}/lien-he/">LIÊN HỆ</a></li>
         <li class="menu-has-children"><a href="">Dropdown</a>
         <ul>
           <li><a href="{{ site.url }}/assets/elements.html">Elements</a></li>
