--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,7 @@
         <li><a href="{{ site.url }}/lien-he/">LIÊN HỆ</a></li>
         <li class="menu-has-children"><a href="">Dropdown</a>
         <ul>
-          <li><a href="{{ site.url }}/assets/elements.html">Elements</a></li>
+          <li><a href="{{ site.url }}/elements/">Elements</a></li>
           <li><a href="{{ site.url }}/assets/product-details.html">Product Details</a></li>
           <li class="menu-has-children"><a href="">Level 2</a>
           <ul>
