--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,7 +20,7 @@
         <li class="menu-has-children"><a href="">Dropdown</a>
         <ul>
           <li><a href="{{ site.url }}/elements/">Elements</a></li>
-          <li><a href="{{ site.url }}/assets/product-details.html">Product Details</a></li>
+          <li><a href="{{ site.url }}/du-an/">Product Details</a></li>
           <li class="menu-has-children"><a href="">Level 2</a>
           <ul>
             <li><a href="#">Item 1</a></li>
