--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,8 +12,8 @@
           <li><a href="{{ site.url }}/san-pham/">SẢN PHẨM</a></li>
           <li class="menu-has-children"><a href="">TIN TỨC</a>
           <ul>
-            <li><a href="{{ site.url }}/assets/blog-home.html">BLOG</a></li>
-            <li><a href="{{ site.url }}/assets/blog-single.html">Blog Single</a></li>
+            <li><a href="{{ site.url }}/blog/">BLOG</a></li>
+            <li><a href="{{ site.url }}/post/">Blog Single</a></li>
           </ul>
         </li>
         <li><a href="{{ site.url }}/lien-he/">LIÊN HỆ</a></li>
