--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -30,12 +30,12 @@
 			<div class="row">
 				<div class="col-lg-8 post-list blog-post-list">
 					<div class="single-post">
-						<img class="img-fluid" src="{{ page.images }}" alt="{{ page.title }}">
-						<ul class="tags">
+						<img class="img-fluid" src="{{ site.url }}/{{ page.images }}" alt="{{ page.title }}">
+						<!--ul class="tags">
 							<li><a href="#">Art,</a></li>
 							<li><a href="#">Technology,</a></li>
 							<li><a href="#">Fashion</a></li>
-						</ul>
+						</ul-->
 						<a href="{{ site.url }}{{ page.url }}">
 							<h2 style="font-size: 40px;text-align: center;">{{ page.title }}</h2>
 						</a>
