--- a/_includes/related_post.html
+++ b/_includes/related_post.html
@@ -3,7 +3,7 @@
     <div class="col-md-3 col-sm-6 bottommargin">
         <div class="ipost clearfix">
             <div class="entry-image">
-               <a href="{{ site.url }}{{ post.url }}"><img class="image_fade" src="{{ post.image }}" alt="{{ post.title }}"></a>
+               <a href="{{ site.url }}{{ post.url }}"><img class="image_fade" src="{{ site.url }}/{{ post.image }}" alt="{{ post.title }}"></a>
             </div>
             <div class="entry-title">
                 <h3><a href="{{ site.url }}{{ post.url }}">{{ post.title }}</a></h3>
