--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -30,7 +30,7 @@
 			<div class="row">
 				<div class="col-lg-8 post-list blog-post-list">
 					<div class="single-post">
-						<img class="img-fluid" src="{{ site.url }}/{{ page.images }}" alt="{{ page.title }}">
+						<img class="img-fluid" src="{{ site.url }}/{{ post.image }}" alt="{{ page.title }}">
 						<!--ul class="tags">
 							<li><a href="#">Art,</a></li>
 							<li><a href="#">Technology,</a></li>
