--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,7 +7,7 @@
     </div>
     <div class="single-widget protfolio-widget">
         <img src="{{ site.url }}/assets/img/blog/user2.jpg" alt="">
-        <a href="#"><h4>Adele Gonzalez</h4></a>
+        <a href="#"><h4>Nguyễn Trọng Huỳnh</h4></a>
         <p>
             MCSE boot camps have its supporters and
             its detractors. Some people do not understand why you should have to spend money
