--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -17,7 +17,7 @@
 			<div class="row d-flex align-items-center justify-content-center">
 				<div class="about-content col-lg-12">
 					<h1 class="text-white">My Blog</h1>
-					<p class="text-white link-nav"><a href="{{ site.url }}">Trang chủ </a>  <span class="lnr lnr-arrow-right"></span>  <a href="blog-home.html"> Blog Home</a></p>
+					<p class="text-white link-nav"><a href="{{ site.url }}">Trang chủ </a>  <span class="lnr lnr-arrow-right"></span>  <a href="{{ site.url }}{{ post.url }}"> My Blog</a></p>
 				</div>
 			</div>
 		</div>
