--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,13 +6,13 @@
         </form>
     </div>
     <div class="single-widget protfolio-widget">
-        <img src="{{ site.url }}/assets/img/blog/user2.jpg" alt="">
+        <img src="{{ site.url }}/images/avatar/my-avatar.jpg" alt="Nguyễn Trọng Huỳnh">
         <a href="#"><h4>Nguyễn Trọng Huỳnh</h4></a>
-        <p>
+        <!--p>
             MCSE boot camps have its supporters and
             its detractors. Some people do not understand why you should have to spend money
             on boot camp when you can get.
-        </p>
+        </p-->
         <ul>
             <li><a href="#"><i class="fa fa-facebook"></i></a></li>
             <li><a href="#"><i class="fa fa-twitter"></i></a></li>
