--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -39,7 +39,7 @@
 						<a href="{{ site.url }}{{ page.url }}">
 							<h2 style="font-size: 40px;text-align: center;">{{ page.title }}</h2>
 						</a>
-						<div class="content-wrap">
+						<div class="content-wrap" style="margin-top: 2em;">
 
 							{{ content }}
 
